# sigil-registry

./: .gitignore  Cargo.toml  Dockerfile  PATENT-PRIORITY.md  fly.toml
migrations/: 0001_create_dids.sql  0002_crowdsourced_registry.sql  0003_seed_official_patterns.sql  0004_extend_patterns.sql
src/: auth.rs  db.rs  error.rs  handlers.rs  handlers_patterns.rs  handlers_policies.rs  main.rs  models.rs
